<resources>
    <string name="app_name">Part3-3-4-RadioButton</string>
    <string name="question1">1. 주문하시겠습니까?</string>
    <string name="radioButton1">예.</string>

    <string name="question2">2. 매장/포장 선택하세요.</string>
    <string name="radioButton2">매장</string>
    <string name="radioButton3">포장(TakeOut)</string>

    <string name="question3">3. 주문할 음식을 하나만 선택하세요.</string>
    <string name="Dish1">제육덮밥</string>
    <string name="Dish2">오징어덮밥</string>
    <string name="Dish3">김치볶음밥</string>
    <string name="Dish4">날치알밥</string>
</resources>